# clubmaquis

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/git-workflow-manager/ARCHIVED/: backmerge_release.py
.claude/skills/git-workflow-manager/scripts/: backmerge_workflow.py  cleanup_release.py  create_worktree.py  daily_rebase.py  generate_work_items_from_pr.py
.claude/skills/initialize-repository/scripts/: apply_workflow.py
docs/: ableton_automation.md  channel_copy.md  pipeline.md
scripts/: __init__.py
scripts/common/: __init__.py  logger.py
scripts/setup/: __init__.py  launchers.py  launchpad_lights.py  recording.py  run_lights.py
scripts/shutdown/: __init__.py  ableton.py  gphotos.py  main.py  quicktime.py  utils.py
src/clubmaquis/: session_logger.py
tests/: test_launchpad_lights.py
